<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_about_us" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/privacy_policy" />
    </group>

    <!--item android:title="Other"  -->

    <item android:title="Movie Database">
        <menu>

            <!--  Τέσσερις  κατηγορίες ταινιών.     movies  -->

            <!--item
                android:id="@+id/search"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="SEARCH"
                app:showAsAction="never"
                android:visibility="gone"
                -->

            <item
                android:id="@+id/nav_movies_Get_Now_Playing"
                android:icon="@drawable/ic_local_movies_black_24dp"
                android:title="@string/activity_title_Now_Playing_Movies" />

            <item
                android:id="@+id/nav_movies_Get_Popular"
                android:icon="@drawable/ic_local_movies_black_24dp"
                android:title="@string/activity_title_Popular_Movies" />

            <item
                android:id="@+id/nav_movies_Get_Top_Rated"
                android:icon="@drawable/ic_local_movies_black_24dp"
                android:title="@string/activity_title_Top_Rated_Movies" />

            <item
                android:id="@+id/nav_movies_Get_Upcoming"
                android:icon="@drawable/ic_local_movies_black_24dp"
                android:title="@string/activity_title_Upcoming_Movies" />

            <!--  Μια κατηγορία προσώπων.   people

            <item
                android:id="@+id/nav_people_Get_Popular"
                android:icon="@drawable/ic_people_black_24dp"
                android:title="@string/nav_celebrities_Get_Popular" />
-->

            <!--  Τέσσερις κατηγορίες για την τηλεόραση.    tv -->

            <item
                android:id="@+id/nav_tv_Get_TV_Airing_Today"
                android:icon="@drawable/ic_personal_video_black_24dp"
                android:title="@string/nav_tv_Get_TV_Airing_Today" />

            <item
                android:id="@+id/nav_tv_Get_TV_On_The_Air"
                android:icon="@drawable/ic_personal_video_black_24dp"
                android:title="@string/nav_tv_Get_TV_On_The_Air" />

            <item
                android:id="@+id/nav_tv_Get_Popular"
                android:icon="@drawable/ic_personal_video_black_24dp"
                android:title="@string/nav_tv_Get_Popular" />

            <item
                android:id="@+id/nav_tv_Get_Top_Rated"
                android:icon="@drawable/ic_personal_video_black_24dp"
                android:title="@string/nav_tv_Get_Top_Rated" />

        </menu>
    </item>

</menu>
